--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,2 +1,9 @@
-<!--pages/mine/mine.wxml-->
-<text>pages/mine/mine.wxml</text>
+<input type="text" bindinput="handleInput"></input>
+<view>{{num}}</view>
+<button bindtap="handletap" data-a="{{1}}">+</button>
+<button bindtap="handletap" data-a="{{-1}}">-</button>
+<radio-group bindchange="handleChange">
+  <radio value="男">男</radio>
+  <radio value="女">女</radio>
+</radio-group>
+<view>你选中的是{{gender}}</view>
